# startup_tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: README.md  app.rs  lib.rs  logs.txt  resources.json
src/panel_functionalities/: calendar_todo.rs  mod.rs  sun_state.rs  weather.rs
