[package]
name = "hello_user"
version = "0.1.0"
authors = ["Erik Hersmann <e.hersmann@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = "1.0.217"
serde_json = "1.0.135"
chrono = "0.4.39"
chrono-tz = "0.10.0"
derive_setters = "0.1.6"
text_io = "0.1.12"
open-meteo-api = "0.1.4"
tui-textarea = "0.7.0"
tokio = "1.43.0"
